# CeilingFan

./: .clang-format  .gitignore  AJH_Servo.cpp  AJH_Servo.h  Amica NodeMCU DEVKIT 1.0.fzpz  CMakeLists.txt  CeilingFan.fzz  CeilingFan.h  CeilingFan.ino  NetworkFunctions.c  NetworkFunctions.ino  README.md  ServoFunctions.c  SuperServo.cpp  SuperServo.h  SuperServo.ino  networkVariables.h
